Update and rename hugday.html to index.html

--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
 </head>
 <body>
     <h1>Click the button to receive all the hugs! 💖</h1>
-    <button class="hug-button" onclick="addHug()">Send a Hug</button>
+    <a href="https://genxshravanop.github.io/Valentine_Week_For_Manu/celebrate.html"
+    <button class="hug-button" onclick="addHug()">Send a Hug</button></a>
 
     <div class="hug-container" id="hug-container">
         <!-- Hug images will appear here -->
