--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 </head>
 <body>
     <h1>Click the button to receive all the hugs! 💖</h1>
-    <a href="https://genxshravanop.github.io/Valentine_Week_For_Manu/celebrate.html"
+    <a href="hug.html"
     <button class="hug-button" onclick="addHug()">Send a Hug</button></a>
 
     <div class="hug-container" id="hug-container">
